Implement RML-FNML execution path